--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                     <ul type="bullet">
                         
                 
-                        <li>won zonals and interzonals in chess</li>
+                        <li>won zonals in chess</li>
                     </ul>
             </div><!-- / container -->
         </section>
